--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -17,12 +17,12 @@ body {
 }
 
 .pantallaCentral{
-    height: 20em;
-    width: 30em;
-
+    height: 18em;
+    width: 34em;
     background-color: rgb(48, 46, 46);
 
-    border: 0.7em solid black;
+    
+    border: 2em solid black;
     border-radius: 1em 1em 0 0;
     
 }
@@ -30,24 +30,25 @@ body {
 
 
 #contenedor{
-    height: 20em;
+    height: 22em;
     width: 50em;
 
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
+
+   
 }
 
 #ladoIzquierdo {
 
-    height: 20em;
-    width: 10em;
+    height: 22em;
+    width: 8em;
     background-color: blue;
-    border: 0.7em solid black;
+    border: 0.2em solid black;
     border-radius: 30% 0 0 30%;
 
-
+    box-shadow: black 5px 5px, black 10px 10px;
 }
 
 #botonIzquierdo {
@@ -87,26 +88,24 @@ body {
 
 #screen {
     width: 30em;
-    height: 20em;
+    height: 18em;
 
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
-    border: 0.7 solid black;
-    border-radius: 1em 1em 0 0;
+      border-radius: 1em 1em 0 0;
+
+    box-shadow: rgb(0, 0, 0) 5px 5px, rgb(0,0,0) 10px 10px;
 }
 
 #ladoDerecho{
 
-    height: 20em;
-    width: 10em;
+    height: 22em;
+    width: 8em;
   
     background-color: red;
-    border: 0.7em solid black;
+    border: 0.2em solid black;
     border-radius: 0 30% 30% 0;
 
-   //* height: 1.5em;
-    width: 1.5em;
-    margin-top: 0.3em;
-    margin-left: 0.5em;
-    border-radius: 50%;
-    background-color: black;*//
+    box-shadow: rgb(0, 0, 0) 5px 5px, rgb(0,0,0) 10px 10px;
 }
