--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,10 +1,9 @@
-
 body {
 
     margin: 0;
     padding: 0;
 
-    background: radial-gradient(rgb(36, 138, 240), rgb(1, 1, 8));;
+    background: radial-gradient(rgb(36, 138, 240), rgb(1, 1, 8));
 
     height: 100vh;
     width: 100vw;
@@ -17,25 +16,25 @@ body {
 
 }
 
-.pantallaCentral{
+.pantallaCentral {
     height: 18em;
     width: 34em;
     background-color: rgb(48, 46, 46);
-    
+
     border: 2em solid black;
     border-radius: 1em 1em 0 0;
-    
+
 }
 
 
-#contenedor{
+#contenedor {
     height: 22em;
     width: 50em;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
-      
+
 }
 
 #ladoIzquierdo {
@@ -44,26 +43,26 @@ body {
     width: 8em;
 
     background: #00aeff;
-    background: linear-gradient(180deg,#00aeff 25%,rgba(1, 103, 150, 0.125)80%);
+    background: linear-gradient(180deg, #00aeff 25%, rgba(1, 103, 150, 0.125)80%);
     border: 0.2em solid black;
 
     border-radius: 30% 0 0 30%;
 
     box-shadow: black 0.5em 0.5em, black 50px 50px 80px;
-  
+
 }
 
-#ladoDerecho{
+#ladoDerecho {
     height: 22em;
     width: 8em;
-    
+
     background-color: hwb(9 4% 5%);
-    background: linear-gradient(180deg,hwb(9 4% 5%) 25%,hwb(9 2% 41%)80%);
+    background: linear-gradient(180deg, hwb(9 4% 5%) 25%, hwb(9 2% 41%)80%);
     border: 0.2em solid black;
     border-radius: 0 30% 30% 0;
 
     box-shadow: black 0.5em 0.5em, black 50px 50px 80px;
-    
+
 }
 
 #botonIzquierdo {
@@ -75,25 +74,25 @@ body {
     margin-left: 2.7em;
     border-radius: 50%;
 
-    
+
     box-shadow: black 0px -23px 25px 0px inset, rgb(37, 37, 37) 0px -36px 30px 0px inset, grey 0px -79px 40px 0px inset, rgb(37, 37, 37) 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-#botonDerecho{
+#botonDerecho {
 
     height: 4em;
     width: 4em;
-    
+
     position: fixed;
     margin-top: 12em;
     margin-left: 2.6em;
     border-radius: 50%;
-    
+
     box-shadow: black 0px -23px 25px 0px inset, rgb(37, 37, 37) 0px -36px 30px 0px inset, grey 0px -79px 40px 0px inset, rgb(37, 37, 37) 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    
+
 }
 
-#botonApagado{
+#botonApagado {
 
     height: 1.5em;
     width: 1.5em;
@@ -103,7 +102,7 @@ body {
     margin-left: 2em;
     border-radius: 50%;
 
-    background-color: black; 
+    background-color: black;
 }
 
 #screen {
@@ -115,25 +114,24 @@ body {
     background-size: cover;
     border-radius: 1em 1em 0 0;
 
-    /*box-shadow: black 0.7em 0.7em;*/
     box-shadow: yellow 0px 0px 10px;
-   
+
 }
 
 
-.botonMenos{
+.botonMenos {
     height: 0.5em;
     width: 0.1em;
 
     position: fixed;
     margin-top: 2em;
     margin-left: 7em;
-    
+
     background-color: black;
 }
 
 
-.botonMas{
+.botonMas {
     height: 0.1em;
     width: 0.1em;
 
@@ -142,9 +140,9 @@ body {
 
     margin-top: -0.5em;
     margin-left: 0.4em;
-  }
+}
 
-.botonesPequeños{
+.botonesPequeños {
     height: 1.9em;
     width: 1.9em;
     border-radius: 50%;
@@ -154,34 +152,33 @@ body {
     background-color: black;
 }
 
-.botonArriba{
+.botonArriba {
     margin-top: 3.5em;
     margin-left: 3.5em;
 }
 
-.botonMedioIzquierda{
+.botonMedioIzquierda {
     margin-top: 5.5em;
     margin-left: 1.6em;
 }
 
-.botonMedioDerecha{
+.botonMedioDerecha {
     margin-top: 5.5em;
     margin-left: 5.5em;
 }
 
-.botonAbajo{
-     margin-top: 7.5em;
+.botonAbajo {
+    margin-top: 7.5em;
     margin-left: 3.5em;
 }
 
-.botonCuadrado{
+.botonCuadrado {
     height: 1.5em;
     width: 1.5em;
 
     position: fixed;
     margin-top: 18em;
     margin-left: -0.5em;
-    
+
     background-color: black;
 }
-
